--- a/index.css
+++ b/index.css
@@ -222,3 +222,12 @@ body {
 .pokemon-card.flipped .capture-button {
   display: block; /* Show the capture button when the card is flipped */
 }
+
+.pokemon-id {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  font-weight: bold;
+  color: #0f0f0f;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+}
